<resources>
    <string name="app_name">Clientside_Dev_MrX</string>
    <string name="channel_id" translatable="false">Clientside_Dev_MrX</string>
    <string name="channel_description" translatable="false">the channel tat receives messages</string>
    <string name="gamemode_easy_description">Playing time: 15 min - GPS Tracker: 2 min</string>
    <string name="gamemode_normal_description">Playing time: 1 hour - GPS Tracker: 5 min</string>
    <string name="gamemode_hard_description">Playing time: 2 hours - GPS Tracker: 10 min</string>
    <string name="gamemode_misterx_description">Playing time: 4 hours - GPS Tracker: 10 min</string>
    <string name="gamemode_easy_title">Easy Mode</string>
    <string name="gamemode_normal_title">Normal Mode</string>
    <string name="gamemode_hard_title">Hard Mode</string>
    <string name="gamemode_misterx_title">MisterX Mode</string>
    <string name="games">Current Games</string>
    <string name="history">History</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="no_games">No games available</string>
    <string name="gamecode_is">Gamecode is:</string>
    <string name="start_game">Start Game</string>
    <string name="participants">Participants</string>
    <string name="toast_no_location_available">"No location available for "</string>
    <string name="notification_text_exit_geofence">You are outside the game area, return!</string>
    <string name="notification_text_enter_geofence">You are inside the game area, enjoy the game!</string>
    <string name="code_for_the_detectives">Code for the detectives</string>
    <string name="enter_the_mister_x_code_below">Enter the Mister X code below</string>
    <string name="driving">Driving</string>
    <string name="bicycling">Bicycling</string>
    <string name="walking">Walking</string>
    <string name="create_route">Create Route</string>
    <string name="get_fastest_route">Get the fastest route to the last known location of Mister X</string>
    <string name="route_alertdialog_message">Are you sure you want to continue with this route?</string>
    <string name="ok">Ok</string>
    <string name="temporary_location">Temporary location</string>
    <string name="stop_alertdialog_message">Are you sure you want to quit this game? This game wil end for the other players as well!</string>
    <string name="stop_the_game">Stop the Game</string>
    <string name="sharedPreferences" translatable="false">com.mpapps.clientside_dev_mrx.sharedPreferences</string>
    <string name="waiting_text">Waiting for the administrator to start the game.</string>
</resources>
