<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/firebase_login_background_gradient">


    <TextView
        android:id="@+id/createroute_fragment_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="Route"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/createroute_fragment_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/get_fastest_route"
        android:textAlignment="center"
        android:maxWidth="250dip"
        android:textColor="@color/editTextHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createroute_fragment_title" />

    <RadioGroup
        android:id="@+id/createroute_fragment_radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createroute_fragment_instructions">

        <RadioButton
            android:id="@+id/createroute_fragment_driving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@drawable/gamemode_radiobutton_color"
            android:checked="true"
            android:text="@string/driving"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/createroute_fragment_bicycling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@drawable/gamemode_radiobutton_color"
            android:text="@string/bicycling"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/createroute_fragment_walking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@drawable/gamemode_radiobutton_color"
            android:text="@string/walking"
            android:textColor="@android:color/white" />
    </RadioGroup>

    <Button
        android:id="@+id/createroute_fragment_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_gradient_light"
        android:text="@string/create_route"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createroute_fragment_radiogroup" />
</android.support.constraint.ConstraintLayout>